--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>N.JULIENNE Recipe-Page-Main</title>
             <link rel="icon" href="favicon-32x32.png"/>
-            <link rel="stylesheet" href="../upskills/css/style.css"/>
+            <link rel="stylesheet" href="style.css"/>
         </head>
         <body>
             <div class="a">
